@@ -144,21 +144,21 @@ cat > ${cpu_file} <<EOF
 (print-match "#f")
 (print-expr (.equals (yo yo) (yo x)))
 
-(test-name ".and")
-(print-match "and")
-(print-expr (.and 1 #t and))
+(test-name ".andif")
+(print-match "andif")
+(print-expr (.andif 1 #t andif))
 (print-match "#f")
-(print-expr (.and 1 #f and))
+(print-expr (.andif 1 #f andif))
 (print-match "#t")
-(print-expr (.and))
+(print-expr (.andif))
 
-(test-name ".or")
-(print-match "or")
-(print-expr (.or #f or))
+(test-name ".orif")
+(print-match "orif")
+(print-expr (.orif #f orif))
 (print-match "#f")
-(print-expr (.or #f #f))
+(print-expr (.orif #f #f))
 (print-match "#f")
-(print-expr (.or))
+(print-expr (.orif))
 
 (test-name ".not")
 (print-match "yep")
@@ -238,21 +238,21 @@ cat > ${cpu_file} <<EOF
 (print-match "-1")
 (print-expr (.sra -3 1))
 
-(test-name ".bitand")
+(test-name ".and")
 (print-match "8")
-(print-expr (.bitand 15 8))
+(print-expr (.and 15 8))
 
-(test-name ".bitor")
+(test-name ".or")
 (print-match "15")
-(print-expr (.bitor 15 8))
+(print-expr (.or 15 8))
 
-(test-name ".bitxor")
+(test-name ".xor")
 (print-match "7")
-(print-expr (.bitxor 15 8))
+(print-expr (.xor 15 8))
 
-(test-name ".bitinv")
+(test-name ".inv")
 (print-match "-6")
-(print-expr (.bitinv 5))
+(print-expr (.inv 5))
 
 (test-name ".car")
 (print-match "car")
