@@ -1,3 +1,13 @@
+2009-07-19  Doug Evans  <dje@sebabeach.org>
+
+	* doc/pmacros.texi (.not): Emphasize (.not 0) is not 1.
+
+	Rename builtin boolean pmacros, for consistency with rtl.
+	* pmacros.scm: .and -> .andif, .or -> .orif, .bitand -> .and,
+	.bitor -> .or, .bitxor -> .xor, .bitinv -> .inv.
+	* doc/pmacros.texi: Update.
+	* testsuite/pmacros-1.test: Update.
+
 2009-07-17  Doug Evans  <dje@sebabeach.org>
 
 	Use hash tables to record ifields, operands, insns, macro-insns.
